tests/it/unit/snapshots/it__unit__snapshot_tests__data_origin_file_tsv.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 413
expression: origin
---
{
  "File": {
    "path": "/data/file.tsv",
    "delimiter": "\t"
  }
}
