tests/it/unit/snapshots/it__unit__snapshot_tests__data_origin_json_with_path.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 413
expression: origin
---
{
  "Json": {
    "path": "/data/file.json"
  }
}
