tests/it/unit/snapshots/it__unit__snapshot_tests__display_names.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 637
expression: output
---
image: vacation.jpg
video: demo.mp4
text: Hello World
link: https://example.com/page
youtube: YouTube: abc123
