tests/it/unit/snapshots/it__unit__snapshot_tests__shape_type_rounded_rect.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 273
expression: shape
---
"RoundedRect"
