tests/it/unit/snapshots/it__unit__snapshot_tests__stored_location_custom.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 515
expression: location
---
{
  "type": "Custom",
  "path": "/Users/user/Documents/Boards"
}
