tests/it/unit/snapshots/it__unit__snapshot_tests__stored_location_default.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 515
expression: location
---
{
  "type": "Default"
}
