tests/it/unit/snapshots/it__unit__snapshot_tests__stored_location_icloud.snap
---
source: tests/it/unit/snapshot_tests.rs
assertion_line: 515
expression: location
---
{
  "type": "ICloud"
}
